# fractal-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  claude-progress.txt  docker-compose.yml  features.json  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agent-memory/devils-advocate/: MEMORY.md
.claude/agent-memory/quant-analyst/: MEMORY.md
.claude/agent-memory/research-analyst/: MEMORY.md
.claude/agent-memory/rule-formulator/: MEMORY.md
.claude/agent-memory/statistical-auditor/: MEMORY.md
.claude/agent-memory/synthesizer/: MEMORY.md
.claude/agents/: devils-advocate.md  quant-analyst.md  research-analyst.md  rule-formulator.md  statistical-auditor.md  synthesizer.md
.claude/commands/: continue.md  research.md
.claude/hooks/: on-pipeline-step.sh
.claude/pipeline/: queue.json
.claude/skills/: research-protocol.md  supabase-schema.md
.github/workflows/: lint.yml  test.yml
config/: pairs.json  sessions.json  tolerances.json
docs/: GLOSSARY.md  PIPELINE_GUIDE.md
docs/architecture/: BLUEPRINT.md
docs/architecture/diagrams/: 01_current_state.mermaid  02_target_state.mermaid  03_domain_data_flow.mermaid  04_migration_roadmap.mermaid  05_multi_agent_pipeline.mermaid  06_strategy_engine_flow.mermaid  07_compound_learning_loop.mermaid
docs/multi-agent framework/: FA_RESEARCH_PIPELINE_BLUEPRINT.md
migrations/: README.md
n8n/: README.md
n8n/1. Data Collection/: WF1 - OHLC Collector (7).json  WF2 - Daily Initializer (3).json  WF3 v2 - Session Tracker (14).json
n8n/2. Alert Processing/: WF4_v1.4 - Alert Processor (8).json  WF5_v1.2 - DXY Correlation Tracker (7).json
n8n/3. Monitoring/: Trade Monitor (1).json
n8n/4. System Management/: Error Handler (2).json  [CORE] Health Check (1).json
n8n/5. Strategies/: [CORE] Strategy Engine (6).json
src/api/: main.py
src/domain/structure/: __init__.py  models.py  swing_detection.py
src/infrastructure/: config.py  database.py
tests/: conftest.py
tests/fixtures/: candles.json
tests/unit/: test_setup.py  test_swing_detection.py
