[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractal-ai"
version = "0.1.0"
description = "Systematic forex trading platform using ICT/Fractal methodology"
readme = "README.md"
license = {text = "UNLICENSED"}
requires-python = ">=3.11"
authors = [
    {name = "Robin"},
]

dependencies = [
    # Core
    "pandas>=2.2",
    "numpy>=1.26",

    # Database
    "psycopg2-binary>=2.9",
    "supabase>=2.0",

    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # Observability
    "structlog>=24.1",

    # HTTP client
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",

    # Linting + formatting
    "ruff>=0.5",

    # Type checking (stretch goal)
    "mypy>=1.10",
    "pandas-stubs>=2.2",
]

research = [
    # Backtesting
    "vectorbt>=0.26",

    # Performance analytics
    "quantstats>=0.0.62",

    # Statistical testing
    "scipy>=1.13",

    # Visualization
    "matplotlib>=3.9",
    "plotly>=5.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may need DB or external services)",
    "slow: Slow-running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "TCH",  # type checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
